# sjconf-libvirt

./: ChangeLog  Makefile.am  README.rst  configure.ac
confs/: Makefile.am  libvirt.conf
debian/: changelog  control  rules  sjconf-libvirt.install  sjconf-libvirt.postinst  sjconf-libvirt.prerm  watch
doc/: Makefile.am  sjconf-libvirt.t2t
plugins/: libvirt.py.in
templates/: Makefile.am
templates/libvirt/: Makefile.am  libvirt-bin.default  libvirtd.default  vmtemplate-disk.xml  vmtemplate-network.xml  vmtemplate.xml
